crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__impl___tests__implementation_head_requires_argument.snap
---
source: crates/nash-parse/src/declaration/impl_.rs
description: impl Eq where
---
Impl(
    BadHead(
        1,
        6,
    ),
    1,
    1,
)
