crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__impl___tests__implementation_head_requires_trait.snap
---
source: crates/nash-parse/src/declaration/impl_.rs
description: impl int where
info: diagnostic
---
nash::syntax

  × Expected a trait name and type arguments.
   ╭─[src/Main.nash:1:6]
 1 │ impl int where
   ·      ─
   ╰────
  help: Write `impl Trait Type where`.
