crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__impl___tests__implementation_method_cannot_have_annotation.snap
---
source: crates/nash-parse/src/declaration/impl_.rs
description: "impl Eq int where\n    eq : int -> bool\n"
---
Impl(
    Method(
        "eq",
        Equals(
            2,
            8,
        ),
        2,
        7,
    ),
    1,
    1,
)
