crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__impl___tests__implementation_methods_must_align.snap
---
source: crates/nash-parse/src/declaration/impl_.rs
description: "impl Lift int Int where\n    lift = liftInt\n     lower = lowerInt\n"
---
Impl(
    Method(
        "lift",
        Body(
            OperatorReserved(
                Equals,
                3,
                12,
            ),
            2,
            12,
        ),
        2,
        9,
    ),
    1,
    1,
)
