crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__impl___tests__implementation_requires_where.snap
---
source: crates/nash-parse/src/declaration/impl_.rs
description: impl Eq int
---
Impl(
    Where(
        1,
        12,
    ),
    1,
    1,
)
