crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__impl___tests__implementation_simple.snap
---
source: crates/nash-parse/src/declaration/impl_.rs
assertion_line: 97
description: "impl Ord int where\n    compare = Builtin.compareInteger\n"
---
Impl(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 2,
                column: 37,
            },
        },
        value: Impl {
            docs: None,
            context: [],
            head: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 13,
                    },
                },
                value: Constraint {
                    class: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 6,
                            },
                            end: Position {
                                line: 1,
                                column: 9,
                            },
                        },
                        value: "Ord",
                    },
                    module: None,
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 10,
                                },
                                end: Position {
                                    line: 1,
                                    column: 13,
                                },
                            },
                            value: Type {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 13,
                                    },
                                },
                                name: "int",
                                args: [],
                            },
                        },
                    ],
                },
            },
            methods: [
                Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 5,
                        },
                        end: Position {
                            line: 3,
                            column: 1,
                        },
                    },
                    value: Define {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 5,
                                },
                                end: Position {
                                    line: 2,
                                    column: 12,
                                },
                            },
                            value: "compare",
                        },
                        args: [],
                        body: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 15,
                                },
                                end: Position {
                                    line: 2,
                                    column: 37,
                                },
                            },
                            value: VarQual {
                                kind: LowVar,
                                module: "Builtin",
                                name: "compareInteger",
                            },
                        },
                        annotation: None,
                    },
                },
            ],
            attributes: [],
        },
    },
)
